--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "john-package",
   "version": "1.0.0",
-  "description": "",
+  "description": "```bash\r npm i -s jonh-package\r ```",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "João Gomes",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Joaosilgo/john-package.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Joaosilgo/john-package/issues"
+  },
+  "homepage": "https://github.com/Joaosilgo/john-package#readme"
 }
