--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "john-package",
-  "version": "1.0.2",
-  "description": "```bash\r npm i -s jonh-package\r ```",
+  "version": "1.0.3",
+  "description": "João Gomes cool Package",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
